# rarbg_api

./: .gitignore  Cargo.toml  LICENSE  README.md  renovate.json
.github/: FUNDING.yml
.github/workflows/: rust-ci-cd.yml  rust-release-major.yml  rust-release-minor.yml  rust-release-patch.yml  rust-release.yml  rust.yml
src/: api_parameters.rs  api_parameters_builder.rs  category.rs  episode_info.rs  error.rs  format.rs  lib.rs  limit.rs  mode.rs  sort_by.rs  token.rs  torrent.rs  torrent_result.rs  torrent_results.rs  torrents.rs
tests/: integration_test.rs
