[package]
authors = ["baptistecdr <baptistecdr@users.noreply.github.com>"]
build = false
categories = ["api-bindings"]
description = "A Rust wrapper for RARBG TorrentAPI"
exclude = [".*", "renovate.json", "*.magnet"]
keywords = ["rarbg_api", "rarbg", "rarbg_wrapper", "rarbg_client", "torrent_api"]
license = "MIT"
name = "rarbg_api"
publish = ["crates-io"]
repository = "https://github.com/baptistecdr/rarbg_api"
version = "1.0.39"
edition = "2018"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
uuid = { version = "1.3.0", features = ["v4"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-test = { version = "0.4.2" }
