[package]
authors = ["baptistecdr <baptistecdr@users.noreply.github.com>"]
build = false
categories = ["api-bindings"]
description = "A Rust wrapper for RARBG TorrentAPI"
exclude = [".*", "renovate.json", "*.magnet"]
keywords = ["rarbg_api", "rarbg", "rarbg_wrapper", "rarbg_client", "torrent_api"]
license = "MIT"
name = "rarbg_api"
publish = ["crates-io"]
repository = "https://github.com/baptistecdr/rarbg_api"
version = "1.0.43-rc.1"
edition = "2018"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4"] }
tokio = { version = "1.28.1", features = ["full"] }
tokio-test = { version = "0.4.2" }
